# arkenstone

./: docker-compose.yml
.github/: pr-labeler.yml
service/: .env  Cargo.toml  Dockerfile  docker-compose.yml
service/migrations/: 000001-create-players-table.sql
service/src/: authentication.rs  lib.rs  main.rs  players.rs  settings.rs
service/src/authentication/: configure.rs  endpoints.rs  mod.rs  service.rs
service/src/authentication/endpoints/: complete.rs  list_providers.rs  mod.rs  model.rs  problem.rs  start.rs
service/src/authentication/model/: provider_name.rs
service/src/authentication/repository/: mod.rs  provider.rs  registry.rs
service/src/authentication/service/: complete.rs  list_providers.rs  mod.rs  service.rs  start.rs
service/src/authentication/usecases/: complete.rs  list_providers.rs  start.rs
service/src/http/problem/: problem.rs
service/src/infrastructure/: health.rs  mod.rs  service.rs
service/src/infrastructure/database/: health.rs  migrate.rs  mod.rs  postgres.rs
service/src/infrastructure/health/: component.rs  configure.rs  model.rs
service/src/model/: identity.rs  model.rs
service/src/players/: configure.rs  model.rs  repository.rs  service.rs
service/tests/: service.rs  test.rs
service/tests/authentication/: complete.rs  google.rs  list_providers.rs  mod.rs  start.rs
service/tests/health/: mod.rs
service/tests/snapshots/: test__authentication__google__complete__invalid_client.snap  test__authentication__google__complete__invalid_code-2.snap  test__authentication__google__complete__missing_id_token-2.snap
(+45 files in other folders)
