[package]
name = "arkenstone"
version = "0.1.0"
authors = ["Graham Cox <graham@grahamcox.co.uk>"]
edition = "2018"

[lib]
name = "arkenstone_lib"

[[bin]]
name="arkenstone"

[dependencies]
dotenv = "0.15.0"
log = "0.4.8"
env_logger = "0.7.1"
config = "0.10.1"
serde = {version = "1.0.106", features=["derive"] }
actix-rt = "1.1.0"

[dev-dependencies]
