[package]
name = "arkenstone"
version = "0.1.0"
authors = ["Graham Cox <graham@grahamcox.co.uk>"]
edition = "2018"

[lib]
name = "arkenstone_lib"

[[bin]]
name="arkenstone"

[dependencies]
dotenv = "0.15.0"
log = "0.4.8"
env_logger = "0.7.1"
config = "0.10.1"
serde = {version="1.0.106", features=["derive"] }
actix-rt = "1.1.0"
actix-web = "2.0.0"
actix-cors = "0.2.0"
bb8 = "0.4.1"
bb8-postgres = "0.4.0"
tokio-postgres = "0.5.3"
lazy_static = "1.4.0"
testcontainers = "0.9.1"
rust-embed = "5.5.1"
thiserror = "1.0.15"
async-trait = "0.1.30"
futures = "0.3.4"
actix-http = "1.0.1"
serde_json = "1.0.51"
bytes = "0.5.4"
uuid = { version="0.8.1", features=["v4"] }
uritemplate = "0.1.2"
url = "2.1.1"

[dev-dependencies]
insta = "0.16.0"
faux = "0.0.4"
galvanic-assert = "0.8.7"

[features]
docker_tests = []
